syntax = "proto3";

option csharp_namespace = "GrpcService.Grpc";

package users;

service Users {
  rpc CreateUser(CreateUserRequestDto) returns (CreateUserResponseDto);
  rpc GetUsers(GetUsersRequestDto) returns (GetUsersResponseDto);
}

message CreateUserRequestDto {
  string login = 1;
  string password = 2;
}

message CreateUserResponseDto {
  string id = 1;
  string login = 2;
  string errors = 3;
}

message GetUsersRequestDto {
  
}

message GetUsersResponseDto {
  repeated UserDto Users = 1;
}

message UserDto {
  string id = 1;
  string login = 2;
}

service Auth {
  rpc Login (LoginRequestDto) returns (LoginResponseDto);
  rpc Check (CheckRequestDto) returns (UserDto);
}

message CheckRequestDto {}

message LoginRequestDto {
  string login = 1;
  string password = 2;
}

message LoginResponseDto {
  string token = 1;
  string error = 2;
}